<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/Home"
        android:enabled="true"
        android:icon="@drawable/home_selector"
        app:showAsAction="ifRoom"
        android:title="@string/home"/>
    <item
        android:id="@+id/Composetouch"
        android:enabled="true"
        android:icon="@drawable/post_selector"
        app:showAsAction="ifRoom"
        android:title="@string/compose" />
    <item
        android:id="@+id/account"
        android:enabled="true"
        android:icon="@drawable/account_selector"
        app:showAsAction="ifRoom"
        android:title="@string/profile"/>
</menu>