<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="32sp"
        android:textColor="@color/black"
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        android:fontFamily="@font/instagram_font"
        android:text="@string/instagram" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_text_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:backgroundTint="@color/white"
            android:hint="@string/username"
            android:autofillHints="Username"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwd_text_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="350dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:autofillHints="Password"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/blue"
        android:textColor="@color/white"
        android:text="@string/log_in" />

    <Button
        android:id="@+id/btnSignUP"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:backgroundTint="@color/green"
        android:text="@string/sign_up" />


</LinearLayout>